# capability-bounded-agents

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
cba/: harness.py  monitor.py
paper/: paper.tex
